<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/itemSpaceXL">
    <RadioGroup
        android:id="@+id/conditionRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        >
        <RadioButton
            android:id="@+id/containsCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contains"
            />

        <RadioButton
            android:id="@+id/equalsCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equals"
            />

        <RadioButton
            android:id="@+id/startsWithCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starts_with"
            />
        <RadioButton
            android:id="@+id/endsWithCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ends_with"
            />
    </RadioGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        app:layout_constraintTop_toBottomOf="@id/conditionRadioGroup"
        android:layout_marginTop="@dimen/itemSpaceL"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber"
        android:layout_marginTop="@dimen/itemSpaceL"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/notes"
        android:layout_marginTop="@dimen/itemSpaceL"
        android:background="@drawable/button_primary"
        android:text="@string/save"
        android:textColor="@color/colorPrimary"
        />
    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/saveBtn"
        android:layout_marginTop="@dimen/itemSpaceL"
        android:background="@drawable/button_stateless"
        android:text="@string/cancel"
        android:textColor="@color/blacklite"
        />

</androidx.constraintlayout.widget.ConstraintLayout>