<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/mainHeader"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white"
        android:elevation="@dimen/itemSpaceXL"
        />
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/serviceControlSwitch"
        app:layout_constraintTop_toTopOf="@id/mainHeader"
        app:layout_constraintBottom_toBottomOf="@id/mainHeader"
        android:layout_marginLeft="@dimen/itemSpaceL"
        android:elevation="@dimen/itemSpaceXL"
        >
        <ImageView
            android:id="@+id/mainDummy5"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/ic_launcher"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/mainDummy5"
            android:layout_marginLeft="@dimen/itemSpaceL"
            />
    </RelativeLayout>

    <Switch
        android:id="@+id/serviceControlSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/mainHeader"
        app:layout_constraintBottom_toBottomOf="@id/mainHeader"
        android:elevation="@dimen/itemSpaceXL"
        android:layout_marginRight="@dimen/itemSpaceL"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="100dp"
        app:layout_constraintTop_toBottomOf="@id/mainHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_add_white_24dp"
        android:layout_marginRight="@dimen/itemSpaceXL"
        android:layout_marginBottom="@dimen/itemSpaceXL"
        android:backgroundTint="@color/colorPrimary"
        app:borderWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:elevation="8dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/mainHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/permissionErrorContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:elevation="8dp"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/mainHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ImageView
            android:id="@+id/mainDummy1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ratings"
            app:layout_constraintBottom_toTopOf="@id/mainDummy2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/mainDummy2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow_permissions_to_avoid_unwanted_calls"
            app:layout_constraintBottom_toTopOf="@id/mainAllowPermissionsBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainDummy1"
            android:layout_marginTop="@dimen/itemSpaceL"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/mainAllowPermissionsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_primary"
            android:text="@string/allow_permissions"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainDummy2"
            android:layout_marginTop="@dimen/itemSpaceL"
            android:padding="@dimen/itemSpaceL"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noContentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/mainHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/mainDummy3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/nocontent"
            app:layout_constraintBottom_toTopOf="@id/mainDummy4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/mainDummy4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_entries_found"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainDummy3"
            android:layout_marginTop="@dimen/itemSpaceL"
            android:textStyle="bold"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>